# app

./: .gitignore  README.md  pyproject.toml
mozyq/: app.py  client.py  io.py  mzq.py  types.py  vid.py
tst/: test_builder.py
